--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -4,7 +4,7 @@
   publisher = "Springer Berlin Heidelberg",
   year      =  1985,
   url       = "http://link.springer.com/book/10.1007%2F978-3-662-02454-6",
-  keywords  = "Furrow mechanics",
+  keywords  = "Cephalic furrow mechanics",
   isbn      = "9783662024560, 9783662024546",
   doi       = "10.1007/978-3-662-02454-6"
 }
@@ -19,7 +19,7 @@
   month    =  jan,
   year     =  1992,
   url      = "http://www.ncbi.nlm.nih.gov/pubmed/1346368",
-  keywords = "- important -;Cephalic furrow;Furrow mechanics",
+  keywords = "- important -;Cephalic furrow;Cephalic furrow mechanics",
   issn     = "0092-8674",
   pmid     = "1346368"
 }
@@ -48,7 +48,7 @@
   month    =  jul,
   year     =  2012,
   url      = "http://dx.doi.org/10.1038/nmeth.2019",
-  keywords = "Manuscript;Furrow mechanics",
+  keywords = "Manuscript;Cephalic furrow mechanics;Brachiopod wnt landscape",
   issn     = "1548-7091, 1548-7105",
   pmid     = "22743772",
   doi      = "10.1038/nmeth.2019",
@@ -80,7 +80,7 @@
   month    =  aug,
   year     =  1986,
   url      = "http://dx.doi.org/10.1126/science.3755551",
-  keywords = "evx = even skipped;Furrow mechanics",
+  keywords = "evx = even skipped;Cephalic furrow mechanics",
   language = "en",
   issn     = "0036-8075",
   pmid     = "3755551",
@@ -121,7 +121,7 @@
   year      =  1998,
   url       = "http://dx.doi.org/10.1006/dbio.1998.8968",
   keywords  = "Brachiopod segmentation;Head-Trunk Boundary;Cephalic
-               furrow;Furrow mechanics",
+               furrow;Cephalic furrow mechanics",
   language  = "en",
   issn      = "0012-1606",
   pmid      = "9733577",
@@ -148,7 +148,7 @@
   pages    = "445--455",
   year     =  2012,
   url      = "http://dx.doi.org/10.1080/10255842.2010.539564",
-  keywords = "Cephalic furrow;Furrow mechanics",
+  keywords = "Cephalic furrow;Cephalic furrow mechanics",
   language = "en",
   issn     = "1025-5842, 1476-8259",
   pmid     = "21331957",
@@ -193,8 +193,8 @@
   year     =  2001,
   url      = "http://www.ncbi.nlm.nih.gov/pubmed/11748148",
   keywords = "pax3/7 = paired;evx = even skipped;buttonhead;- important
-              -;Cephalic furrow;Molecular patterning;Morphogenesis;Furrow
-              mechanics",
+              -;Cephalic furrow;Molecular patterning;Morphogenesis;Cephalic
+              furrow mechanics",
   language = "en",
   issn     = "0950-1991",
   pmid     = "11748148"
@@ -215,7 +215,7 @@
   month     =  apr,
   year      =  1985,
   url       = "http://link.springer.com/article/10.1007/BF00848246",
-  keywords  = "Drosophila;Cephalic furrow;Furrow mechanics",
+  keywords  = "Drosophila;Cephalic furrow;Cephalic furrow mechanics",
   language  = "en",
   issn      = "0043-5546",
   doi       = "10.1007/BF00848246"
@@ -266,7 +266,7 @@
   month    =  sep,
   year     =  1989,
   url      = "http://www.ncbi.nlm.nih.gov/pubmed/2516798",
-  keywords = "Cephalic furrow;Furrow mechanics",
+  keywords = "Cephalic furrow;Cephalic furrow mechanics",
   language = "en",
   issn     = "0950-1991",
   pmid     = "2516798"
@@ -281,7 +281,7 @@
   volume    =  1,
   pages     = "425--465",
   year      =  1993,
-  keywords  = "Furrow mechanics"
+  keywords  = "Cephalic furrow mechanics"
 }
 
 @ARTICLE{Spencer2015-td,
@@ -316,7 +316,7 @@
   url      = "http://dx.doi.org/10.1016/j.ydbio.2015.03.022",
   keywords = "Apical constriction; Cell shape change; Cephalic furrow;
               Gastrulation; Invagination; Morphogenesis;- important -;Cephalic
-              furrow;Furrow mechanics",
+              furrow;Cephalic furrow mechanics",
   language = "en",
   issn     = "0012-1606, 1095-564X",
   pmid     = "25929228",
@@ -362,7 +362,7 @@
   month    =  aug,
   year     =  1992,
   url      = "http://dx.doi.org/10.1038/358687a0",
-  keywords = "Head-Trunk Boundary;Furrow mechanics",
+  keywords = "Head-Trunk Boundary;Cephalic furrow mechanics",
   language = "en",
   issn     = "0028-0836",
   pmid     = "1353865",
@@ -399,7 +399,7 @@
   year     =  2013,
   url      = "http://dx.doi.org/10.1073/pnas.1315642110",
   keywords = "embryonic development; gene regulatory networks;
-              optimization;Cephalic furrow;Furrow mechanics",
+              optimization;Cephalic furrow;Cephalic furrow mechanics",
   language = "en",
   issn     = "0027-8424, 1091-6490",
   pmid     = "24089448",
@@ -461,7 +461,7 @@
   url      = "http://dx.doi.org/10.1186/s12859-017-1934-z",
   keywords = "Extensibility; Image processing; ImageJ; ImageJ2;
               Interoperability; N-dimensional; Open development; Open source;
-              Reproducibility;Furrow mechanics",
+              Reproducibility;Cephalic furrow mechanics",
   language = "en",
   issn     = "1471-2105",
   pmid     = "29187165",
@@ -514,7 +514,8 @@
   month    =  mar,
   year     =  2017,
   url      = "http://dx.doi.org/10.1371/journal.pcbi.1005443",
-  keywords = "- important -;Cephalic furrow;Morphogenesis;Furrow mechanics",
+  keywords = "- important -;Cephalic furrow;Morphogenesis;Cephalic furrow
+              mechanics",
   language = "en",
   issn     = "1553-734X, 1553-7358",
   pmid     = "28346461",
@@ -544,7 +545,7 @@
   month    =  jan,
   year     =  2017,
   url      = "http://dx.doi.org/10.1038/nature21348",
-  keywords = "- important -;Cephalic furrow;Furrow
+  keywords = "- important -;Cephalic furrow;Cephalic furrow
               mechanics;Mechano-development",
   language = "en",
   issn     = "0028-0836, 1476-4687",
@@ -580,7 +581,8 @@
   year     =  2017,
   url      = "http://dx.doi.org/10.1016/j.mod.2016.12.001",
   keywords = "Cell intercalation; Drosophila; Forces; Germ-band extension;-
-              important -;Cephalic furrow;Morphogenesis;Furrow mechanics",
+              important -;Cephalic furrow;Morphogenesis;Cephalic furrow
+              mechanics",
   language = "en",
   issn     = "0925-4773, 1872-6356",
   pmid     = "28013027",
@@ -625,7 +627,7 @@
   year     =  2013,
   url      = "http://dx.doi.org/10.1073/pnas.1220912110",
   annote   = "Cephalic furrow position has a precision of 1\% of embryo length.",
-  keywords = "- to be read -;Cephalic furrow;Furrow mechanics",
+  keywords = "- to be read -;Cephalic furrow;Cephalic furrow mechanics",
   language = "en",
   issn     = "0027-8424, 1091-6490",
   pmid     = "23580621",
@@ -656,7 +658,7 @@
   month    =  dec,
   year     =  2015,
   url      = "http://dx.doi.org/10.1038/nmeth.3648",
-  keywords = "imaging;Furrow mechanics",
+  keywords = "imaging;Cephalic furrow mechanics",
   language = "en",
   issn     = "1548-7091, 1548-7105",
   pmid     = "26524242",
@@ -687,7 +689,7 @@
   pages    = "17--24",
   year     =  1988,
   url      = "https://www.ncbi.nlm.nih.gov/pubmed/2907986",
-  keywords = "Head-Trunk Boundary;Furrow mechanics",
+  keywords = "Head-Trunk Boundary;Cephalic furrow mechanics",
   language = "en",
   issn     = "0950-1991",
   pmid     = "2907986"
@@ -724,8 +726,8 @@
   month    =  nov,
   year     =  1994,
   url      = "https://www.ncbi.nlm.nih.gov/pubmed/7720557",
-  keywords = "string;- important -;Molecular patterning;Mitotic domains;Furrow
-              mechanics",
+  keywords = "string;- important -;Molecular patterning;Mitotic
+              domains;Cephalic furrow mechanics",
   language = "en",
   issn     = "0950-1991",
   pmid     = "7720557",
@@ -742,7 +744,7 @@
   month    =  mar,
   year     =  2019,
   url      = "http://dx.doi.org/10.1038/s41592-019-0359-1",
-  keywords = "Furrow mechanics",
+  keywords = "Cephalic furrow mechanics",
   language = "en",
   issn     = "1548-7091, 1548-7105",
   pmid     = "30886414",
@@ -767,8 +769,8 @@
   url       = "https://rupress.org/jcb/article-abstract/220/8/e202011106/212389/The-nature-of-cell-division-forces-in-epithelial?redirectedFrom=fulltext",
   keywords  = "cell growth; epithelium; diagnostic imaging; participation in
                ward rounds; stress; gel; cytokinesis; e-cadherin; cell nucleus;
-               epithelial cells; drosophila; epidermis;Mitotic domains;Furrow
-               mechanics",
+               epithelial cells; drosophila; epidermis;Mitotic domains;Cephalic
+               furrow mechanics",
   issn      = "0021-9525",
   doi       = "10.1083/jcb.202011106"
 }
@@ -807,7 +809,7 @@
   month    =  dec,
   year     =  2018,
   url      = "http://dx.doi.org/10.1038/s41592-018-0216-7",
-  keywords = "Furrow mechanics",
+  keywords = "Cephalic furrow mechanics",
   language = "en",
   issn     = "1548-7091, 1548-7105",
   pmid     = "30478326",
@@ -844,7 +846,7 @@
   month    =  oct,
   year     =  2015,
   url      = "http://dx.doi.org/10.1038/ncb3226",
-  keywords = "Cephalic furrow;Furrow mechanics",
+  keywords = "Cephalic furrow;Cephalic furrow mechanics",
   language = "en",
   issn     = "1465-7392, 1476-4679",
   pmid     = "26389664",
@@ -877,7 +879,7 @@
   month    =  sep,
   year     =  2019,
   url      = "http://dx.doi.org/10.1038/s41592-019-0582-9",
-  keywords = "Furrow mechanics",
+  keywords = "Cephalic furrow mechanics",
   language = "en",
   issn     = "1548-7091, 1548-7105",
   pmid     = "31570887",
@@ -926,7 +928,8 @@
               evocation, is an interesting question for future consideration.",
   keywords = "Drosophila;buttonhead;evx = even skipped;- important -;Cephalic
               furrow;Head-Trunk Boundary;Molecular
-              patterning;Morphogenesis;Mitotic domains;Furrow mechanics",
+              patterning;Morphogenesis;Mitotic domains;Cephalic furrow
+              mechanics",
   language = "en",
   issn     = "0950-1991",
   pmid     = "9367430"
@@ -961,7 +964,7 @@
   month    =  jun,
   year     =  1977,
   url      = "http://dx.doi.org/10.1016/0012-1606(77)90225-1",
-  keywords = "Drosophila;Cephalic furrow;Furrow mechanics",
+  keywords = "Drosophila;Cephalic furrow;Cephalic furrow mechanics",
   language = "en",
   issn     = "0012-1606",
   pmid     = "406152",
@@ -992,7 +995,7 @@
   month    =  mar,
   year     =  2020,
   url      = "http://dx.doi.org/10.1016/j.gde.2020.02.014",
-  keywords = "- to be read -;Furrow mechanics;Mechano-development",
+  keywords = "- to be read -;Cephalic furrow mechanics;Mechano-development",
   language = "en",
   issn     = "0959-437X, 1879-0380",
   pmid     = "32171160",
@@ -1034,7 +1037,7 @@
               shortening; epithelial folding; lateral myosin contractility;
               mechanical noise; morphogenetic precision; myosin planar
               polarity; optogenetics; robustness; tissue-scale mechanical
-              coupling;- important -;Cephalic furrow;Furrow mechanics",
+              coupling;- important -;Cephalic furrow;Cephalic furrow mechanics",
   language = "en",
   issn     = "1534-5807, 1878-1551",
   pmid     = "32169160",
@@ -1071,7 +1074,7 @@
   month    =  jun,
   year     =  2009,
   url      = "http://dx.doi.org/10.1038/nmeth.1327",
-  keywords = "Mechano-development;Furrow mechanics",
+  keywords = "Mechano-development;Cephalic furrow mechanics",
   language = "en",
   issn     = "1548-7091, 1548-7105",
   pmid     = "19412170",
@@ -1098,7 +1101,7 @@
   year      =  1997,
   url       = "https://doi.org/10.1007/978-3-662-22489-2_2",
   address   = "Berlin, Heidelberg",
-  keywords  = "- important -;Furrow mechanics",
+  keywords  = "- important -;Cephalic furrow mechanics",
   isbn      = "9783662224892",
   doi       = "10.1007/978-3-662-22489-2\_2"
 }
@@ -1134,8 +1137,8 @@
   year     =  2020,
   url      = "http://dx.doi.org/10.1016/j.devcel.2020.07.019",
   keywords = "3D cell culture; alginate capsules; epithelial monolayer;
-              epithelium mechanics; morphogenesis;- to be read -;Furrow
-              mechanics",
+              epithelium mechanics; morphogenesis;- to be read -;Cephalic
+              furrow mechanics",
   language = "en",
   issn     = "1534-5807, 1878-1551",
   pmid     = "32800097",
@@ -1184,7 +1187,7 @@
   month    =  jan,
   year     =  2021,
   url      = "https://doi.org/10.1038/s41580-020-00318-6",
-  keywords = "- important -;Furrow mechanics;Mechano-development",
+  keywords = "- important -;Cephalic furrow mechanics;Mechano-development",
   issn     = "1471-0072, 1471-0080",
   doi      = "10.1038/s41580-020-00318-6"
 }
@@ -1218,7 +1221,7 @@
   year     =  1989,
   url      = "http://dx.doi.org/10.1016/0092-8674(89)90183-9",
   keywords = "string;- important -;Cephalic furrow;Mitotic
-              domains;Mutants;Furrow mechanics",
+              domains;Mutants;Cephalic furrow mechanics",
   language = "en",
   issn     = "0092-8674",
   pmid     = "2702688",
@@ -1255,7 +1258,7 @@
   month    =  mar,
   year     =  2021,
   url      = "https://www.biorxiv.org/content/10.1101/2021.03.18.435928v1",
-  keywords = "- to be read -;Cephalic furrow;Furrow mechanics",
+  keywords = "- to be read -;Cephalic furrow;Cephalic furrow mechanics",
   language = "en",
   doi      = "10.1101/2021.03.18.435928"
 }
@@ -1291,7 +1294,8 @@
   month    =  jul,
   year     =  2020,
   url      = "http://dx.doi.org/10.1091/mbc.E19-12-0673",
-  keywords = "- important -;Cephalic furrow;Mitotic domains;Furrow mechanics",
+  keywords = "- important -;Cephalic furrow;Mitotic domains;Cephalic furrow
+              mechanics",
   language = "en",
   issn     = "1059-1524, 1939-4586",
   pmid     = "32129704",
@@ -1330,7 +1334,7 @@
   month    =  mar,
   year     =  2010,
   url      = "http://dx.doi.org/10.1083/jcb.200910099",
-  keywords = "Drosophila;stocks;- to be read -;Furrow mechanics",
+  keywords = "Drosophila;stocks;- to be read -;Cephalic furrow mechanics",
   language = "en",
   issn     = "0021-9525, 1540-8140",
   pmid     = "20194639",
@@ -1349,7 +1353,7 @@
   year      =  2005,
   url       = "https://www.worldcat.org/title/drosophila-a-laboratory-handbook/oclc/56324270",
   address   = "Cold Spring Harbor, N.Y.",
-  keywords  = "Furrow mechanics",
+  keywords  = "Cephalic furrow mechanics",
   isbn      = "9780879697068, 9781936113699"
 }
 
@@ -1385,7 +1389,7 @@
   month    =  feb,
   year     =  2013,
   url      = "http://dx.doi.org/10.1038/nature11792",
-  keywords = "- important -;Mitotic domains;Furrow mechanics",
+  keywords = "- important -;Mitotic domains;Cephalic furrow mechanics",
   language = "en",
   issn     = "0028-0836, 1476-4687",
   pmid     = "23334416",
@@ -1418,7 +1422,7 @@
   month     =  feb,
   year      =  2016,
   url       = "http://dx.doi.org/10.1115/1.4032128",
-  keywords  = "- important -;Furrow mechanics;Writing clearly",
+  keywords  = "- important -;Cephalic furrow mechanics;Writing clearly",
   language  = "en",
   issn      = "0148-0731, 1528-8951",
   pmid      = "26632268",
@@ -1470,7 +1474,7 @@
   month    =  sep,
   year     =  2016,
   url      = "http://dx.doi.org/10.1039/c6ib00046k",
-  keywords = "Furrow mechanics",
+  keywords = "Cephalic furrow mechanics",
   language = "en",
   issn     = "1757-9694, 1757-9708",
   pmid     = "27476872",
@@ -1506,7 +1510,7 @@
   month    =  sep,
   year     =  2021,
   url      = "https://www.biorxiv.org/content/10.1101/2021.09.16.460711v1?rss=1&utm_source=dlvr.it&utm_medium=twitter",
-  keywords = "Furrow mechanics",
+  keywords = "Cephalic furrow mechanics",
   language = "en",
   doi      = "10.1101/2021.09.16.460711"
 }
@@ -1534,7 +1538,7 @@
   month    =  nov,
   year     =  2016,
   url      = "http://dx.doi.org/10.1093/bioinformatics/btw413",
-  keywords = "Furrow mechanics",
+  keywords = "Cephalic furrow mechanics",
   language = "en",
   issn     = "1367-4803, 1367-4811",
   pmid     = "27412086",
