--- a/1-analyses/germband-extension/germband.Rmd
+++ b/1-analyses/germband-extension/germband.Rmd
@@ -135,7 +135,13 @@ colnames(gblong) <- columns
 
 ## Plotting
 
+We want to identify the difference between the cephalic furrow and the ectopic
+folds in the percentage of germ band extension, and the timing of formation
+after gastrulation.
 
+First, we plot the germ band extension (%) for homozygotes and heterozygotes at
+two different moments: initial infolding/buckling (buck) and deepest point
+(deep).
 
 ```{r plot-gbpct}
 ggplot(gblong, aes(zygosity, gb_pct, color = zygosity, fill = zygosity)) +
@@ -150,15 +156,12 @@ ggplot(gblong, aes(zygosity, gb_pct, color = zygosity, fill = zygosity)) +
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1),
         legend.position = "none"
-        #axis.text.x = element_text(face = "italic"),
-        #legend.position = c(0.80,0.3),
-        #legend.text = element_text(size = 15),
-        #legend.title = element_text(size = 15),
         )
 ggsave("2-plots/gb_pct-btd.png", width = 15, height = 8)
 ggsave("2-plots/gb_pct-btd.svg", width = 15, height = 8)
 ```
 
+Second, we plot the time after gastrulation (%).
 
 ```{r plot-gbtime}
 ggplot(gblong, aes(zygosity, gb_time, color = zygosity, fill = zygosity)) +
@@ -173,13 +176,9 @@ ggplot(gblong, aes(zygosity, gb_time, color = zygosity, fill = zygosity)) +
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1),
         legend.position = "none"
-        #axis.text.x = element_text(face = "italic"),
-        #legend.position = c(0.80,0.3),
-        #legend.text = element_text(size = 15),
-        #legend.title = element_text(size = 15),
         )
-ggsave("2-plots/gb_pct-btd.png", width = 15, height = 8)
-ggsave("2-plots/gb_pct-btd.svg", width = 15, height = 8)
+ggsave("2-plots/gb_time-btd.png", width = 15, height = 8)
+ggsave("2-plots/gb_time-btd.svg", width = 15, height = 8)
 ```
 
 
