--- a/1-analyses/germband-extension/germband.Rmd
+++ b/1-analyses/germband-extension/germband.Rmd
@@ -149,16 +149,16 @@ ggplot(gblong, aes(zygosity, gb_pct, color = zygosity, fill = zygosity)) +
   geom_point(alpha = 0.8, size = 2, show.legend = FALSE, position = position_jitterdodge(dodge.width = 1, jitter.width = 0.10)) +
   scale_fill_manual(values=c("#56b4e9", "#e69f03")) +
   scale_color_manual(values=c("#56b4e9", "#e69f03")) +
-  labs(x = "btd embryos", y = "germ band extension (%)") +
-  facet_grid(~status) +
+  labs(x = "stocks", y = "germ band extension (%)") +
+  facet_grid(rows = vars(status), cols = vars(stock)) +
   theme_classic() +
    theme(text = element_text(size = 20),
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1),
         legend.position = "none"
         )
-ggsave("2-plots/gb_pct-btd.png", width = 15, height = 8)
-ggsave("2-plots/gb_pct-btd.svg", width = 15, height = 8)
+ggsave("2-plots/gb_pct.png", width = 15, height = 8)
+ggsave("2-plots/gb_pct.svg", width = 15, height = 8)
 ```
 
 Second, we plot the time after gastrulation (min).
@@ -169,16 +169,16 @@ ggplot(gblong, aes(zygosity, gb_time, color = zygosity, fill = zygosity)) +
   geom_point(alpha = 0.8, size = 2, show.legend = FALSE, position = position_jitterdodge(dodge.width = 1, jitter.width = 0.10)) +
   scale_fill_manual(values=c("#56b4e9", "#e69f03")) +
   scale_color_manual(values=c("#56b4e9", "#e69f03")) +
-  labs(x = "btd embryos", y = "time after gastrulation (min)") +
-  facet_grid(~status) +
+  labs(x = "stocks", y = "time after gastrulation (min)") +
+  facet_grid(rows = vars(status), cols = vars(stock)) +
   theme_classic() +
    theme(text = element_text(size = 20),
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1),
         legend.position = "none"
         )
-ggsave("2-plots/gb_time-btd.png", width = 15, height = 8)
-ggsave("2-plots/gb_time-btd.svg", width = 15, height = 8)
+ggsave("2-plots/gb_time.png", width = 15, height = 8)
+ggsave("2-plots/gb_time.svg", width = 15, height = 8)
 ```
 
 
