--- a/1-analyses/germband-extension/germband.Rmd
+++ b/1-analyses/germband-extension/germband.Rmd
@@ -144,15 +144,17 @@ two different moments: initial infolding/buckling (buck) and deepest point
 (deep).
 
 ```{r plot-gb-pct}
-ggplot(gblong, aes(zygosity, gb_pct, color = zygosity, fill = zygosity)) +
+ggplot(gblong, aes(factor(stock, level = c("wt", "btd", "eve", "prd")), gb_time, color = zygosity, fill = zygosity)) +
   geom_violin(draw_quantiles = c("0.5"), show.legend = TRUE, trim = TRUE, alpha = 0.3, scale = "area", adjust = 1) +
   geom_point(alpha = 0.8, size = 2, show.legend = FALSE, position = position_jitterdodge(dodge.width = 1, jitter.width = 0.10)) +
   scale_fill_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
   scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
-  labs(x = "stocks", y = "germ band extension (%)") +
-  facet_grid(rows = vars(status), cols = vars(stock)) +
+  labs(title = "Ectopic folding relative to germ band position",
+       x = "stocks", y = "germ band extension (%)") +
+  facet_grid(rows = vars(status)) +
   theme_classic() +
-   theme(text = element_text(size = 20),
+  theme(text = element_text(size = 20),
+        title = element_text(size = 15),
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1),
         legend.position = "none"
@@ -164,15 +166,17 @@ ggsave("2-plots/gb_pct.svg", width = 15, height = 8)
 Second, we plot the time after gastrulation (min).
 
 ```{r plot-gb-time}
-ggplot(gblong, aes(zygosity, gb_time, color = zygosity, fill = zygosity)) +
+ggplot(gblong, aes(factor(stock, level = c("wt", "btd", "eve", "prd")), gb_time, color = zygosity, fill = zygosity)) +
   geom_violin(draw_quantiles = c("0.5"), show.legend = TRUE, trim = TRUE, alpha = 0.3, scale = "area", adjust = 1) +
   geom_point(alpha = 0.8, size = 2, show.legend = FALSE, position = position_jitterdodge(dodge.width = 1, jitter.width = 0.10)) +
   scale_fill_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
   scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
-  labs(x = "stocks", y = "time after gastrulation (min)") +
-  facet_grid(rows = vars(status), cols = vars(stock)) +
+  labs(title = "Ectopic folding relative to time after gastrulation",
+       x = "stocks", y = "time after gastrulation (min)") +
+  facet_grid(rows = vars(status)) +
   theme_classic() +
-   theme(text = element_text(size = 20),
+  theme(text = element_text(size = 20),
+        title = element_text(size = 15),
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1),
         legend.position = "none"
